2cd version of project introduction

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
   </head>
   <body>
       <h1 class="title">Tejas Landage </h1>
-      
+     <p>DevOps engineers may take on specific roles, depending on their interests and the organisations’ needs. Among the types of DevOps engineers are:</p>
+    <ul>
+      <li><strong>Release manager:</strong> Manages ongoing software updates.</li>
+      <li><strong>Software developer:</strong> Writes code.</li>
+      <li><strong>Software tester:</strong> Tests code for bugs.</li>
+      <li><strong>Quality assurance engineer:</strong> Reviews and tests new code.</li>
+      <li><strong>Security engineer:</strong> Ensures the security of the software in the system.</li>
+      <li><strong>Automation engineer:</strong> Works to automate the software and systems.</li>
+    </ul>
+    <p>In India, tech giants like Oracle, Infosys, Accenture, Tech Mahindra, TCS, IBM, and Wipro are among the companies that regularly seek DevOps professionals.</p>
       <script src="script.js"></script>
   </body>
 </html>`
