3rd version of project skill set

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Hello, World!</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
-      <h1 class="title">Tejas Landage </h1>
-     <p>DevOps engineers may take on specific roles, depending on their interests and the organisations’ needs. Among the types of DevOps engineers are:</p>
+  <body style="background-color: yellow;">
+    <h1 class="title">Tejas Landage</h1>
+    
+    <p>DevOps engineers may take on specific roles, depending on their interests and the organisations’ needs. Among the types of DevOps engineers are:</p>
     <ul>
       <li><strong>Release manager:</strong> Manages ongoing software updates.</li>
       <li><strong>Software developer:</strong> Writes code.</li>
@@ -16,6 +17,11 @@
       <li><strong>Automation engineer:</strong> Works to automate the software and systems.</li>
     </ul>
     <p>In India, tech giants like Oracle, Infosys, Accenture, Tech Mahindra, TCS, IBM, and Wipro are among the companies that regularly seek DevOps professionals.</p>
-      <script src="script.js"></script>
+
+   
+    
+    <script src="script.js"></script>
   </body>
-</html>`
+</html>
+
+				 >
