--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		          <link rel="stylesheet" href="styles.css" />
 			    </head>
 			      <body style="background-color: yellow;">
-				          <h1 class="title">Tejas Landage</h1>
+				          <h1 class="title">Tejas Landage😎</h1>
 					      
 					      <p>DevOps engineers may take on specific roles, depending on their interests and the organisations’ needs. Among the types of DevOps engineers are:</p>
 					          <ul>
