--- a/dev.html
+++ b/dev.html
@@ -4,7 +4,7 @@
     <title>Hello, World!</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-    <h1 class="title"> Meenakshi Maskar</h1>
+    <h1 class="title"> Meenakshi Maskar 🧟</h1>
      <script src="script.js"></script>
   </body>
 </html>
